--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,25 @@ pip==9.0.3
 setuptools==39.1.0
 wheel==0.31.1
 
+amqp==2.2.2
+Babel==2.5.3
+billiard==3.5.0.3
+celery==4.1.0
+certifi==2018.4.16
+chardet==3.0.4
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 Django==1.11.13
+django-babel==0.6.2
+django-bootstrap4==0.0.5
 django-cache-url==2.0.0
+django-webpack-loader==0.5.0
+google-measurement-protocol==1.0.0
+idna==2.6
+kombu==4.1.0
+prices==1.0.0
 pytz==2018.4
+requests==2.18.4
+typing==3.6.4
+urllib3==1.22
+vine==1.1.4
