--- a/requirements.txt
+++ b/requirements.txt
@@ -8,19 +8,40 @@ billiard==3.5.0.3
 celery==4.1.0
 certifi==2018.4.16
 chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 Django==1.11.13
 django-babel==0.6.2
 django-bootstrap4==0.0.5
 django-cache-url==2.0.0
+django-celery-results==1.0.1
+django-countries==5.2
+django-phonenumber-field==2.0.0
+django-prices==1.0.0
+django-prices-openexchangerates==1.0.0
+django-render-block==0.5
+django-templated-email==2.2.0
+django-versatileimagefield==1.9
 django-webpack-loader==0.5.0
+google-i18n-address==2.3.0
 google-measurement-protocol==1.0.0
 idna==2.6
 kombu==4.1.0
+maxminddb==1.3.0
+maxminddb-geolite2==2017.803
+oauthlib==2.0.7
+phonenumberslite==8.9.1
+Pillow==5.0.0
 prices==1.0.0
+PyJWT==1.6.3
+python3-openid==3.1.0
 pytz==2018.4
 requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.11.0
+social-auth-app-django==2.1.0
+social-auth-core==1.6.0
 typing==3.6.4
 urllib3==1.22
 vine==1.1.4
