--- a/runfile/uwsgi.ini
+++ b/runfile/uwsgi.ini
@@ -4,23 +4,19 @@ gid = www-data
 base = /home/%(uid)
 
 home = %(base)/venv
-chdir = %(base)/ShirtGeeks/src
+chdir = %(base)/cvm
 module = conf.wsgi:application
 
 master = true
 processes = 2
 
-socket = %(base)/ShirtGeeks/runfile/uwsgi.sock
+socket = %(base)/cvm/runfile/uwsgi.sock
 chown-socket = %(uid):%(gid)
 chmod-socket = 664
 vacuum = true
 
-logger = file:/home/ubuntu/ShirtGeeks/runfile/uwsgi.log
+logger = file:/home/ubuntu/cvm/runfile/uwsgi.log
 
 env = PYTHONIOENCODING=utf-8
 env = LANG=en_US.UTF-8
 env = LC_ALL=en_US.UTF-8
-
-#env = DJANGO_SETTINGS_MODULE=conf.settings
-env = EMAIL_HOST_USER=aaaa@gmail.com
-env = EMAIL_HOST_PASSWORD=aaaa
