20180521 change uwsgi.ini-module conf->cvm
add

--- a/runfile/uwsgi.ini
+++ b/runfile/uwsgi.ini
@@ -5,7 +5,7 @@ base = /home/%(uid)
 
 home = %(base)/venv
 chdir = %(base)/cvm
-module = conf.wsgi:application
+module = cvm.wsgi:application
 
 master = true
 processes = 2
