--- a/package.json
+++ b/package.json
@@ -13,60 +13,60 @@
   },
   "homepage": "http://getsaleor.com/",
   "engines": {
-    "node": "^8.7.0",
-    "npm": "^5.4.2"
+    "node": "8.7.0",
+    "npm": "5.4.2"
   },
   "dependencies": {
     "bootstrap": "4.0.0",
-    "classnames": "^2.2.5",
-    "detect-passive-events": "^1.0.4",
-    "dropzone": "^5.2.0",
-    "jquery": "^3.1.1",
-    "jquery.cookie": "^1.4.1",
-    "lazysizes": "^4.0.1",
-    "materialize-css": "^0.100.2",
-    "medium-editor": "^5.23.3",
-    "mobx": "^3.0.2",
-    "mobx-react": "^4.1.0",
-    "popper.js": "^1.14.1",
-    "query-string": "^5.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "select2": "^4.0.5",
-    "sortablejs": "^1.5.0-rc1",
-    "svg-injector-2": "^2.0.35"
+    "classnames": "2.2.5",
+    "detect-passive-events": "1.0.4",
+    "dropzone": "5.2.0",
+    "jquery": "3.1.1",
+    "jquery.cookie": "1.4.1",
+    "lazysizes": "4.0.1",
+    "materialize-css": "0.100.2",
+    "medium-editor": "5.23.3",
+    "mobx": "3.0.2",
+    "mobx-react": "4.1.0",
+    "popper.js": "1.14.1",
+    "query-string": "5.0.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "select2": "4.0.5",
+    "sortablejs": "1.5.0-rc1",
+    "svg-injector-2": "2.0.35"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/preset-es2015": "^7.0.0-beta.44",
-    "@babel/preset-react": "^7.0.0-beta.44",
-    "@babel/preset-stage-0": "^7.0.0-beta.44",
-    "autoprefixer": "^8.2.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^8.0.0-beta.2",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^0.4.0",
-    "mjml": "^3.3.5",
-    "node-sass": "^4.8.3",
-    "postcss": "^6.0.21",
-    "postcss-loader": "^2.1.3",
-    "sass-loader": "^6.0.7",
-    "webpack": "^4.5.0",
-    "webpack-bundle-tracker": "^0.3.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.44",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.44",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
+    "@babel/preset-es2015": "7.0.0-beta.44",
+    "@babel/preset-react": "7.0.0-beta.44",
+    "@babel/preset-stage-0": "7.0.0-beta.44",
+    "autoprefixer": "8.2.0",
+    "babel-eslint": "8.2.2",
+    "babel-loader": "8.0.0-beta.2",
+    "css-loader": "0.28.11",
+    "eslint": "4.6.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-react": "7.3.0",
+    "eslint-plugin-standard": "3.0.1",
+    "file-loader": "1.1.11",
+    "mini-css-extract-plugin": "0.4.0",
+    "mjml": "3.3.5",
+    "node-sass": "4.8.3",
+    "postcss": "6.0.21",
+    "postcss-loader": "2.1.3",
+    "sass-loader": "6.0.7",
+    "webpack": "4.5.0",
+    "webpack-bundle-tracker": "0.3.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.1"
   },
   "babel": {
     "presets": [
